WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286722
Non-unified build fixes for ResourceMonitor and others
https://bugs.webkit.org/show_bug.cgi?id=286722
Summary
Non-unified build fixes for ResourceMonitor and others
Lauro Moura
Reported
2025-01-29 17:50:58 PST
Just a few missing includes and namespaces.
Attachments
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2025-01-29 17:56:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39738
EWS
Comment 2
2025-01-29 21:48:08 PST
Committed
289544@main
(c1fbf2215b58): <
https://commits.webkit.org/289544@main
> Reviewed commits have been landed. Closing PR #39738 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-01-29 21:49:16 PST
<
rdar://problem/143866769
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug