Non-unified build fixes for ResourceMonitor and others https://bugs.webkit.org/show_bug.cgi?id=286722

Unreviewed build fix.

* Source/WebCore/loader/ResourceMonitor.cpp: Add missing includes.
* Source/WebCore/loader/ResourceMonitorChecker.cpp: Ditto.
(WebCore::ResourceMonitorChecker::checkEligibility): Namespace the
return type in terms of the local type.
* Source/WebCore/loader/ResourceMonitorThrottler.cpp: Add missing
  includes.
* Source/WebCore/platform/audio/VectorMath.cpp: Ditto.
* Source/WebCore/rendering/line/LineWidth.cpp: Ditto.

Canonical link: https://commits.webkit.org/289544@main